# Personal-Projects

./: README.md  index.html
Algorithm for path finding/: ._htable.h  Makefile  README.md  a_star.c  heap.c  heap.h  htable.c  htable.h  pppp.c  pppp.h  test  test.c  test_heap.c  text.txt  tools.c  tools.h  tsp_brute_force.c  tsp_heuristic.c  tsp_main.c  tsp_mst.c  tsp_mst.h  tsp_prog_dyn.c
Algorithm for path finding/tp-note-2025/tp-note-TAP-2025/: Makefile  misc.h  taquin  taquin.c  taquin.h  translation_taquin_dot_c
Architecture ordinateur/: README
BigZeroSix-seven0-main/: .gitlab-ci.yml  Mots.txt  README  apprendre.html  contact.css  contact.html  durable.html  ethique.html  game_apprendre.html  game_durable.html  game_ethique.html  game_innover.html  game_proteger.html  game_recycler.html  grill.css  grill.html  home.css  home.html  home.js  home1.html  ia.html  innover.html  proteger.html  recycler.html  style_apprend.css  style_durable.css  style_ethique.css  style_innover.css  style_protege.css  style_recycle.css  wordle.html
International Scientific Game/: README.md
JAVA- INTELLIJ/Save-the-Hedgehog - final/Save-the-Hedgehog-main/: .gitignore  README.md  build.gradle  settings.gradle
JAVA- INTELLIJ/Save-the-Hedgehog - final/Save-the-Hedgehog-main/world/: world_1level_clear.properties  world_1level_compressed.properties  world_3levels_clear.properties
My storytelling game/: Histoire du jeu.docx
Programmation de système/: .gitignore  CmdParsing.l  CmdParsing.y  Display.c  Display.h  Evaluation.c  Evaluation.h  Expression.c  Expression.h  InternalCommands.c  InternalCommands.h  Makefile  README  Shell  Shell.c  Shell.h  all.txt  hehe  lex.yy.c  y.output  y.tab.c  y.tab.h
Projet Techno en C/COMPLETED- Projet Techno/: .gitignore  Makefile  README  demo.js  game.data  game.html
Projet Techno en C/COMPLETED- Projet Techno/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_private.c  game_private.h  game_struct.h  game_struct.h:Zone.Identifier  game_tools.c  game_tools.h  wrapper.c
Thread computation/easypap-se/: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  EasypapConfig.cmake  INSTALL-HOWTO.md  README.md  cmake_install.cmake  run  view
Thread computation/easypap-se-master/: .gitignore  CMakeLists.txt  INSTALL-HOWTO.md  README.md  run  view
Thread computation/easypap-se-master/cmake/: EasypapConfig.cmake.in  FindHWLOC.cmake  ezvConfig.cmake.in
Thread computation/easypap-se-master/data/rle/: hglider.rle
Thread computation/easypap-se-master/include/: api_funcs.h  easypap.h  ez_pthread.h  ez_tbb.hpp  ezp_bind.h  gen_threads.h  img_data.h  mesh_data.h  monitoring.h  ocl.h
Thread computation/easypap-se-master/internal/: constants.h  hash.h
Thread computation/easypap-se-master/kernel/c/: asandPile.c  heat3d.c  life.c  mandel.c  max.c  none.c  pixelize.c  (+9 more)
Thread computation/easypap-se-master/lib/ezm/apps/: CMakeLists.txt  mandel.c  mesh.c  run-cmake.sh
Thread computation/easypap-se-master/lib/ezv/examples/: CMakeLists.txt  ezv_img.c  ezv_mesh.c
Thread computation/easypap-se-master/plots/: expTools.py  graphTools.py  run-xp-heat-mandel.py  run-xp-tsp.py
Thread computation/easypap-se-master/script/: build-select  clean-output-files  cmake-debug.sh  cmake-easypap.sh  cmake-from-external-easytools.sh  cmake-libs.sh  easypap-common.bash  easypap-completion.bash  easypap-list-gpu-variants  easypap-list-variants  easypap-utilities.bash  new-kernel  stage-xp  which
Thread computation/easypap-se-master/src/: ez_pthread.c  ez_tbb.cpp  ezp_alloc.c  ezp_bind.c  ezp_monitoring.c  gen_threads.c  hash.c  hooks.c  main.c  mesh_data.c  mesh_mgpu_cuda.cu  mesh_mgpu_ocl.c  ocl.c  pthread_barrier.c
Thread computation/easypap-se/include/: easypap.h  ezp_helpers.h  mesh_data.h  monitoring.h  pthread_barrier.h
Thread computation/easypap-se/internal/: private_glob.h
Thread computation/easypap-se/kernel/: Makefile  cmake_install.cmake
Thread computation/easypap-se/kernel/c/: Makefile  cmake_install.cmake  heat3d.c  invert.c  pixelize.c  rotation90.c  sample.c  sample3d.c  sandPile.c  scrollup.c  skin3d.c  transpose.c
Thread computation/easypap-se/kernel/cuda/: invert.cu  rotation90.cu  sample3d.cu  scrollup.cu
Thread computation/easypap-se/kernel/mipp/: invert.cpp
Thread computation/easypap-se/kernel/ocl/: common3d.cl  invert.cl  pixelize.cl  ssandPile.cl  transpose.cl
Thread computation/easypap-se/lib/: Makefile  cmake_install.cmake
Thread computation/easypap-se/lib/ezm/: CMakeLists.txt  cmake_install.cmake  ezm.pc  ezmConfig.cmake
Thread computation/easypap-se/lib/ezm/apps/: mandel.c  mesh.c  run-cmake.sh
Thread computation/easypap-se/lib/ezm/include/: ezm.h
Thread computation/easypap-se/lib/ezm/src/: ezm_footprint.c
Thread computation/easypap-se/lib/ezm/view/: CMakeLists.txt  cmake_install.cmake
Thread computation/easypap-se/lib/ezv/: CMakeLists.txt  cmake_install.cmake  ezv.pc  ezvConfig.cmake
Thread computation/easypap-se/lib/ezv/apps/: CMakeLists.txt  cellmask.c  diy.c  dualimage.c  image.c  imagecpu.c  imagedapu.c  mesh.c  monitor.c  morton.c  paint.c  part.c  patch.c  run-cmake.sh  store.c
Thread computation/easypap-se/lib/ezv/include/: ezv_event.h  ezv_img2d_object.h  ezv_mesh3d_object.h  ezv_palette.h  ezv_virtual.h  mesh3d_obj.h
Thread computation/easypap-se/lib/ezv/internal/: ezv_mon_object.h
Thread computation/easypap-se/lib/ezv/share/ezv/shaders/mesh3d/: data-mask.gs
Thread computation/easypap-se/lib/ezv/src/: ezv_img2d_object.c  ezv_mon_object.c  ezv_palette.c  ezv_shader.c  ezv_virtual.c
Thread computation/easypap-se/script/: .gitignore  build-select  clean-output-files  cmake-debug.sh  cmake-easypap.sh  cmake-install-ezv-ezm.sh  easypap-list-gpu-variants  easypap-list-kernels  easypap-list-variants  easypap-utilities.bash  stage-xp  which
Thread computation/easypap-se/share/ezv/shaders/mesh3d/: cpu-mask-ssbo.gs  cpu_data-mask-ssbo.gs  cpu_data-mask.gs  cut-mask-ssbo.gs  cut-mask.gs  picking-mask.fs
Thread computation/easypap-se/src/: ezp_monitoring.c  img_data.c  pthread_barrier.c
(+138 files in other folders)
